--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Project</title>
 </head>
+
 <body>
-   <script src="app.js"></script> 
+
+    <div
+        style="display: flex; align-items: center; flex-direction: column; width: 500px; margin: 0 auto; border: 5px; padding: 50px; height: 300px; background-color: antiquewhite; ">
+        UserName<input type="text" name="UserName" id="UserName">
+        Email<input type="email" name="Email" id="Email">
+        Password<input type="password" name="Password" id="Password">
+        CPassword<input type="password" name="CPassword" id="CPassword">
+        <button onclick="signUpHandler()">Submit</button>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="app.js"></script>
 </body>
+
 </html>
