--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
     </nav>
 </header>
 
+<h1 class="heading">Registration Form</h1>
+
 <!-- Form  -->
 
     <div class="regForm">
-        UserName<input type="text" name="UserName" id="UserName" placeholder="User Name">
-        Email<input type="email" name="Email" id="Email" placeholder="Email">
-        Password<input type="password" name="Password" id="Password" placeholder="Password">
-        CPassword<input type="password" name="CPassword" id="CPassword" placeholder="Confirm Password">
+        <form action="#" class="form-Style">
+            <label for="">
+        UserName:<input type="text" name="UserName" id="UserName" placeholder="User Name"><br>
+        EmailAdress:<input type="email" name="Email" id="Email" placeholder="Email"><br>
+        Password:<input style="width: 320;" type="password" name="Password" id="Password" placeholder="Password"><br>
+        CPassword:<input type="password" name="CPassword" id="CPassword" placeholder="Confirm Password"><br>
         <button class="submit" onclick="signUpHandler()">Submit</button>
+    </label>
+    </form>
     </div>
 
 
