--- a/home/home.html
+++ b/home/home.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Home-Page</title>
+    <title>Home | Page</title>
 </head>
 <body>
+
+
 
 
 <!-- navBar -->
@@ -42,6 +44,17 @@
 
 
 
-    <script src="app.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="home.js"></script>
 </body>
 </html>
