--- a/signup/index.html
+++ b/signup/index.html
@@ -17,11 +17,11 @@
     <div class="regForm">
         <form action="#" class="form-Style">
             <label for="">
-        UserName:<input type="text" name="UserName" id="UserName" placeholder="User Name"><br>
-        EmailAdress:<input type="email" name="Email" id="Email" placeholder="Email"><br>
-        Password:<input style="width: 320;" type="password" name="Password" id="Password" placeholder="Password"><br>
-        CPassword:<input type="password" name="CPassword" id="CPassword" placeholder="Confirm Password"><br>
-        <button class="submit" onclick="signUpHandler()">Submit</button>
+        UserName:<input type="text" name="UserName" id="userName" placeholder="User Name"><br>
+        EmailAdress:<input type="email" name="Email" id="email" placeholder="email"><br>
+        Password:<input style="width: 320;" type="password" name="password" id="password" placeholder="Password"><br>
+        CPassword:<input type="password" name="CPassword" id="cPassword" placeholder="Confirm Password"><br>
+        <button class="submit" onclick="signupHandler()">Submit</button>
     </label>
     </form>
     </div>
