--- a/login/index.html
+++ b/login/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Login-Page</title>
+    <title>Signup</title>
 </head>
+
 <body>
-
-    <div class="logForm">
-        <form action="#" class="form-Style">
-            <label for="">
-        EmailAdress:<input type="email" name="Email" id="email" placeholder="Email"><br>
-        Password:<input style="width: 320;" type="password" name="Password" id="password" placeholder="Password"><br>
-        <button class="submit" onclick="loginHandler()">Submit</button>
-    </label>
-    </form>
+    <div style="display: flex; flex-direction: column; width: 500px; margin: 0 auto; background-color: antiquewhite; border-radius: 20px; padding: 20px; align-items: center;">
+        <h2>Login Form</h2>
+        Email: <input type="email" name="" id="email"> 
+        Password: <input type="password" id="password">
+        <button onclick="loginHandler()">Submit</button>
     </div>
-
-
 
     <script src="app.js"></script>
 </body>
+
 </html>
