login-sign-form-50%

--- a/login/index.html
+++ b/login/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <div style="display: flex; flex-direction: column; width: 500px; margin: 0 auto; background-color: antiquewhite; border-radius: 20px; padding: 20px; align-items: center;">
+    <div class="container">
+    <div class="form" style="display: flex; flex-direction: column; width: 500px; margin: 0 auto; background-color: antiquewhite; border-radius: 20px; padding: 20px; align-items: center;">
         <h2>Login Form</h2>
         Email: <input type="email" name="" id="email"> 
         Password: <input type="password" id="password">
-        <button onclick="loginHandler()">Submit</button>
+        <button style="margin-top: 10px; padding: 5px; width: 150px;" onclick="loginHandler()">Submit</button>
     </div>
-
+</div>
     <script src="app.js"></script>
 </body>
 
