login-sign-form----80%

--- a/home/index.html
+++ b/home/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Home | Page</title>
 </head>
+
 <body>
 
     <header>
@@ -40,16 +42,49 @@
 
 
 
-<h1>Welcome to the Home Page ! Mr. <span id="userName">userName</span></h1>
+    <h1>Welcome to the Home Page ! Mr. <span id="userName">userName</span></h1>
 
+    <p style="text-align: center;">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam numquam ex, perferendis odit doloribus fuga
+        cumque obcaecati inventore eos consequatur sunt praesentium? Beatae eveniet earum vitae sunt praesentium fuga
+        non?
+        <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate cumque nulla dolor. Corrupti minima
+        reprehenderit dolore voluptatum incidunt tempora aliquid quod ipsa quos placeat facilis corporis reiciendis
+        eligendi voluptatem dolorum veritatis inventore temporibus, quia repudiandae? Ea ex qui tenetur, veritatis non
+        veniam maiores ab esse blanditiis tempore numquam doloremque cum possimus iure commodi, hic repellat eaque
+        voluptate ullam minima, harum iste. Optio, cum? Deleniti obcaecati vitae neque incidunt? Voluptas in
+        necessitatibus blanditiis voluptates fugiat recusandae totam dignissimos. Similique, saepe ipsa! Temporibus aut
+        rem veritatis repudiandae culpa obcaecati? Atque vel, molestiae voluptas quis nostrum beatae natus inventore
+        saepe alias earum!
+        <br>
+        <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis temporibus blanditiis laboriosam et
+        quibusdam, reprehenderit dolorem eum repellat similique commodi odio officia ipsum sequi saepe ullam inventore
+        veniam ab harum reiciendis. A, rem sit voluptate reprehenderit nulla iusto veritatis? Magni itaque vitae
+        delectus, suscipit possimus soluta aperiam neque cum libero.
+        <br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore asperiores fugit qui deserunt laudantium
+        consequuntur, vel dolor in, impedit dolorum culpa consectetur, aliquam quibusdam adipisci animi. Culpa ipsum at
+        expedita? Deleniti, nam totam modi vero rerum quibusdam labore sequi ea? Unde obcaecati est culpa at, eveniet
+        inventore optio? Sed neque error aperiam iste ab quam numquam consectetur et culpa! Vel sequi, ipsa
+        autem facere dignissimos fugiat tenetur non veniam impedit modi laboriosam adipisci harum, doloremque ipsum illo
+        molestiae veritatis qui illum quam dolores officiis? Ipsum, voluptates.
+        <br> <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fuga libero obcaecati dolorem maiores quae
+        iste delectus veniam numquam excepturi, sunt accusamus maxime animi accusantium necessitatibus nulla sequi, et
+        inventore, quasi iure ipsum facilis quam! Perspiciatis quisquam est quaerat facere mollitia. Consequuntur cum
+        inventore saepe aliquam laborum, et iure facere animi quam. Itaque incidunt placeat dolore
+        voluptatem, officiis quos? Ex est nihil voluptatem at libero pariatur distinctio, dignissimos labore.
+    </p>
+<br>
 
-
-
-
+<hr>
 
 
 
 
     <script src="app.js"></script>
 </body>
+
 </html>
