--- a/signup/index.html
+++ b/signup/index.html
@@ -12,10 +12,10 @@
     <div class="container">
     <div class="form" style="display: flex; flex-direction: column; width: 500px; margin: 0 auto; background-color: rgb(231, 223, 238); border-radius: 20px; padding: 20px; align-items: center;">
         <h2>Signup Form</h2>
-        UserName: <input type="text" id="userName"> 
-        Email: <input type="email" name="" id="email"> 
-        Password: <input type="text" id="password">
-        Confirm Password: <input type="text" id="cPassword">
+        UserName: <input type="text" id="userName" placeholder="Type UserName"> 
+        Email: <input type="email" name="" id="email" placeholder="Type Email Address"> 
+        Password: <input type="password" id="password" placeholder="Type Password">
+        Confirm Password: <input type="password" id="cPassword" placeholder="Type Confirm Password">
         <button style="margin-top: 10px; padding: 5px; width: 150px;" onclick="signupHandler()"><b>Submit</b></button>
     </div>
 </div>
