--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <div class="logo"><i>Responsive Nav-Bar</i></div>
+        <div class="logo"><i>Registration-Login</i></div>
         <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
@@ -42,7 +42,7 @@
 
 
 
-    <h1>Welcome to the Home Page ! Mr. <span id="userName">userName</span></h1>
+    <h1 style="text-align: center; margin-top: 50px;">Welcome to the Home Page ! Mr. <span id="userName">userName</span></h1>
 
     <p style="text-align: center;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam numquam ex, perferendis odit doloribus fuga
