--- a/login/index.html
+++ b/login/index.html
@@ -12,8 +12,8 @@
     <div class="container">
     <div class="form" style="display: flex; flex-direction: column; width: 500px; margin: 0 auto; background-color: antiquewhite; border-radius: 20px; padding: 20px; align-items: center;">
         <h2>Login Form</h2>
-        Email: <input type="email" name="" id="email" placeholder="Type Email"> 
-        Password: <input type="password" id="password" placeholder="Type Password">
+        Email: <input style="padding: 7px;" type="email" name="" id="email" placeholder="Type Email"> 
+        Password: <input style="padding: 7px;" type="password" id="password" placeholder="Type Password">
         <button style="margin-top: 10px; padding: 5px; width: 150px;" onclick="loginHandler()">Submit</button>
     </div>
 </div>
